tests/parser-test-files/bad-files/parse-continue.1.error
error: Invalid continue
  --> test:4:10
   |
 4 |  (define f (continue))
   |            ^^^^^^^^^^ continue does not appear in an enclosing loop
