tests/parser-test-files/bad-files/parse-continue.1.coal
;; BAD: Parse Continue
(package test-parser)

(define f (continue))
